Limpieza y frescura web

--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -19,29 +19,30 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
-        /* CSS Variables from globals.css */
+        /* CSS Variables - Clean Minimal Theme */
         :root {
-            --background: 0 0% 100%;
-            --foreground: 224 64% 10%;
+            --background: 220 14% 96%;
+            --foreground: 220 9% 46%;
             --card: 0 0% 100%;
-            --card-foreground: 224 64% 10%;
+            --card-foreground: 220 13% 18%;
             --popover: 0 0% 100%;
-            --popover-foreground: 224 64% 10%;
-            --primary: 224 64% 33%;
-            --primary-foreground: 0 0% 98%;
-            --secondary: 210 40% 96.1%;
-            --secondary-foreground: 224 64% 10%;
-            --muted: 210 40% 96.1%;
-            --muted-foreground: 215 20% 65%;
-            --accent: 217 94% 67%;
-            --accent-foreground: 224 64% 10%;
+            --popover-foreground: 220 13% 18%;
+            --primary: 217 91% 45%;
+            --primary-foreground: 0 0% 100%;
+            --secondary: 220 14% 96%;
+            --secondary-foreground: 220 13% 18%;
+            --muted: 220 14% 96%;
+            --muted-foreground: 220 9% 46%;
+            --accent: 217 91% 45%;
+            --accent-foreground: 0 0% 100%;
             --destructive: 0 84.2% 60.2%;
             --destructive-foreground: 0 0% 98%;
-            --border: 214.3 31.8% 91.4%;
-            --input: 214.3 31.8% 91.4%;
-            --ring: 217 94% 67%;
+            --border: 220 13% 91%;
+            --input: 220 13% 91%;
+            --ring: 217 91% 45%;
             --radius: 0.5rem;
         }
+
 
         * {
             margin: 0;
@@ -63,7 +64,7 @@
             font-family: 'Cambria', 'Noto Serif', serif;
         }
 
-        /* Custom background with illustration */
+        /* Dot Grid Background Pattern */
         .container-illustration {
             position: fixed;
             top: 0;
@@ -71,7 +72,9 @@
             right: 0;
             bottom: 0;
             z-index: -1;
-            background: linear-gradient(135deg, hsl(var(--secondary)) 0%, hsl(var(--background)) 50%, hsl(var(--accent) / 0.1) 100%);
+            background-color: #f5f6f7;
+            background-image: radial-gradient(circle, #d1d5db 1px, transparent 1px);
+            background-size: 24px 24px;
         }
 
         /* Mobile menu styles */
@@ -258,63 +261,45 @@
         <!-- Sobre Mí Section -->
         <section class="flex min-h-screen w-full items-center justify-center py-16">
             <div class="container mx-auto max-w-4xl px-4 md:px-6">
-                <div class="rounded-2xl bg-white/95 p-8 md:p-12 shadow-2xl backdrop-blur-sm">
+                <div
+                    class="rounded-3xl bg-white/70 backdrop-blur-md border border-white/30 p-10 md:p-16 shadow-2xl transition-all duration-300 hover:shadow-[0_0_50px_rgba(6,182,212,0.2)]">
                     <!-- Profile Header -->
-                    <div class="text-center mb-8">
-                        <h1 class="text-4xl md:text-5xl font-extrabold tracking-tight text-primary mb-6">
+                    <div class="text-center mb-12">
+                        <h1 class="text-5xl md:text-6xl font-extrabold tracking-tight text-primary mb-8">
                             Sergio Argudo Santiago
                         </h1>
 
                         <!-- Professional Titles -->
-                        <div class="space-y-3 mb-8">
-                            <div class="flex items-center justify-center gap-2">
-                                <svg class="h-5 w-5 text-accent flex-shrink-0" xmlns="http://www.w3.org/2000/svg"
-                                    fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                                </svg>
-                                <p class="text-lg md:text-xl font-semibold text-foreground">
+                        <div class="space-y-4 mb-10">
+                            <div class="flex items-center justify-center gap-3">
+                                <p class="text-xl md:text-2xl font-semibold text-foreground">
                                     Inspector del SOIVRE (Promoción 2025)
                                 </p>
                             </div>
-                            <div class="flex items-center justify-center gap-2">
-                                <svg class="h-5 w-5 text-accent flex-shrink-0" xmlns="http://www.w3.org/2000/svg"
-                                    fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                                </svg>
-                                <p class="text-lg md:text-xl font-semibold text-foreground">
+                            <div class="flex items-center justify-center gap-3">
+                                <p class="text-xl md:text-2xl font-semibold text-foreground">
                                     Ingeniero Técnico del SOIVRE (Promoción 2023)
                                 </p>
                             </div>
                         </div>
 
                         <!-- Divider -->
-                        <div class="w-24 h-1 bg-primary mx-auto mb-8 rounded-full"></div>
+                        <div class="w-32 h-1.5 bg-gradient-to-r from-primary to-accent mx-auto mb-10 rounded-full">
+                        </div>
 
                         <!-- Education -->
-                        <div class="space-y-4">
-                            <h2 class="text-2xl font-bold text-primary mb-4">Formación Académica</h2>
-                            <div class="space-y-3">
-                                <div class="flex items-start gap-3 text-left max-w-2xl mx-auto">
-                                    <svg class="h-5 w-5 text-primary mt-1 flex-shrink-0"
-                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
-                                    </svg>
-                                    <p class="font-serif text-muted-foreground leading-relaxed">
+                        <div class="space-y-6">
+                            <h2 class="text-3xl font-bold text-primary mb-6 tracking-tight">Formación Académica</h2>
+                            <div class="space-y-4">
+                                <div
+                                    class="flex items-start gap-4 text-left max-w-2xl mx-auto bg-white/50 backdrop-blur-sm rounded-2xl p-5 border border-white/40">
+                                    <p class="font-serif text-foreground/80 leading-relaxed text-lg">
                                         Ingeniero Químico por la Universidad Complutense de Madrid
                                     </p>
                                 </div>
-                                <div class="flex items-start gap-3 text-left max-w-2xl mx-auto">
-                                    <svg class="h-5 w-5 text-primary mt-1 flex-shrink-0"
-                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                            d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
-                                    </svg>
-                                    <p class="font-serif text-muted-foreground leading-relaxed">
+                                <div
+                                    class="flex items-start gap-4 text-left max-w-2xl mx-auto bg-white/50 backdrop-blur-sm rounded-2xl p-5 border border-white/40">
+                                    <p class="font-serif text-foreground/80 leading-relaxed text-lg">
                                         Máster en Ingeniería Química por la Universidad Autónoma de Madrid y Universidad
                                         Rey Juan Carlos
                                     </p>
@@ -323,10 +308,10 @@
                         </div>
 
                         <!-- Contact Button -->
-                        <div class="mt-10">
+                        <div class="mt-12">
                             <a href="mailto:sergio.argudo.santiago@example.com"
-                                class="inline-flex items-center gap-2 rounded-lg bg-primary px-8 py-3 text-base font-semibold text-primary-foreground shadow-lg transition-all duration-300 hover:bg-primary/90 hover:shadow-xl hover:scale-105">
-                                <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                class="inline-flex items-center gap-3 rounded-2xl bg-primary px-10 py-4 text-lg font-semibold text-primary-foreground shadow-xl transition-all duration-300 hover:bg-primary/90 hover:shadow-[0_0_30px_rgba(6,182,212,0.5)] hover:scale-105">
+                                <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                         d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
