--- a/fuentes-de-datos.html
+++ b/fuentes-de-datos.html
@@ -22,29 +22,30 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 
     <style>
-        /* CSS Variables from globals.css */
+        /* CSS Variables - Clean Minimal Theme */
         :root {
-            --background: 0 0% 100%;
-            --foreground: 224 64% 10%;
+            --background: 220 14% 96%;
+            --foreground: 220 9% 46%;
             --card: 0 0% 100%;
-            --card-foreground: 224 64% 10%;
+            --card-foreground: 220 13% 18%;
             --popover: 0 0% 100%;
-            --popover-foreground: 224 64% 10%;
-            --primary: 224 64% 33%;
-            --primary-foreground: 0 0% 98%;
-            --secondary: 210 40% 96.1%;
-            --secondary-foreground: 224 64% 10%;
-            --muted: 210 40% 96.1%;
-            --muted-foreground: 215 20% 65%;
-            --accent: 217 94% 67%;
-            --accent-foreground: 224 64% 10%;
+            --popover-foreground: 220 13% 18%;
+            --primary: 217 91% 45%;
+            --primary-foreground: 0 0% 100%;
+            --secondary: 220 14% 96%;
+            --secondary-foreground: 220 13% 18%;
+            --muted: 220 14% 96%;
+            --muted-foreground: 220 9% 46%;
+            --accent: 217 91% 45%;
+            --accent-foreground: 0 0% 100%;
             --destructive: 0 84.2% 60.2%;
             --destructive-foreground: 0 0% 98%;
-            --border: 214.3 31.8% 91.4%;
-            --input: 214.3 31.8% 91.4%;
-            --ring: 217 94% 67%;
+            --border: 220 13% 91%;
+            --input: 220 13% 91%;
+            --ring: 217 91% 45%;
             --radius: 0.5rem;
         }
+
 
         * {
             margin: 0;
@@ -66,7 +67,7 @@
             font-family: 'Cambria', 'Noto Serif', serif;
         }
 
-        /* Custom background with illustration */
+        /* Dot Grid Background Pattern */
         .container-illustration {
             position: fixed;
             top: 0;
@@ -74,7 +75,9 @@
             right: 0;
             bottom: 0;
             z-index: -1;
-            background: linear-gradient(135deg, hsl(var(--secondary)) 0%, hsl(var(--background)) 50%, hsl(var(--accent) / 0.1) 100%);
+            background-color: #f5f6f7;
+            background-image: radial-gradient(circle, #d1d5db 1px, transparent 1px);
+            background-size: 24px 24px;
         }
 
         /* Mobile menu styles */
@@ -261,13 +264,13 @@
         <!-- Fuentes de Datos Section -->
         <section class="flex min-h-screen w-full items-center py-16 md:py-24 lg:py-32">
             <div class="container mx-auto px-4 md:px-6">
-                <div class="bg-white/95 rounded-2xl shadow-xl p-8">
-                    <div class="flex flex-col items-center space-y-4 text-center mb-12">
-                        <h2
-                            class="text-4xl font-extrabold tracking-tighter text-primary sm:text-5xl md:text-6xl lg:text-7xl">
+                <div class="bg-white/70 backdrop-blur-md border border-white/30 rounded-3xl shadow-2xl p-12">
+                    <div class="flex flex-col items-center space-y-6 text-center mb-16">
+                        <h2 class="text-5xl font-extrabold tracking-tight text-primary sm:text-6xl md:text-7xl">
                             FUENTES DE DATOS
                         </h2>
-                        <p class="max-w-[900px] font-serif text-justify text-muted-foreground md:text-xl">
+                        <p
+                            class="max-w-[900px] font-serif text-justify text-foreground/80 text-lg md:text-xl leading-relaxed">
                             Visualización de estadísticas relevantes para las oposiciones del SOIVRE basadas en
                             convocatorias anteriores.
                         </p>
@@ -275,20 +278,23 @@
 
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mb-8">
                         <!-- Chart Container -->
-                        <div class="bg-background/50 rounded-lg border p-6">
-                            <h3 class="text-xl font-bold text-primary mb-4">Evolución de Plazas</h3>
+                        <div
+                            class="bg-white/60 backdrop-blur-sm border border-white/40 rounded-2xl p-8 hover:bg-white/70 transition-all duration-300">
+                            <h3 class="text-2xl font-bold text-primary mb-6 tracking-tight">Evolución de Plazas</h3>
                             <canvas id="plazasChart"></canvas>
                         </div>
 
                         <!-- Pie Chart Container -->
-                        <div class="bg-background/50 rounded-lg border p-6">
-                            <h3 class="text-xl font-bold text-primary mb-4">Ratio Aspirantes/Plaza</h3>
+                        <div
+                            class="bg-white/60 backdrop-blur-sm border border-white/40 rounded-2xl p-8 hover:bg-white/70 transition-all duration-300">
+                            <h3 class="text-2xl font-bold text-primary mb-6 tracking-tight">Ratio Aspirantes/Plaza</h3>
                             <canvas id="ratioChart"></canvas>
                         </div>
                     </div>
 
                     <!-- Table Container -->
-                    <div class="bg-background/50 rounded-lg border p-6">
+                    <div
+                        class="bg-white/60 backdrop-blur-sm border border-white/40 rounded-2xl p-8 hover:bg-white/70 transition-all duration-300">
                         <h3 class="text-xl font-bold text-primary mb-4">Datos Detallados</h3>
                         <div class="overflow-x-auto">
                             <table id="dataTable" class="w-full text-sm">
