--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
-        /* CSS Variables from globals.css */
+        /* CSS Variables - Clean Minimal Theme */
         :root {
-            --background: 0 0% 100%;
-            --foreground: 224 64% 10%;
+            --background: 220 14% 96%;
+            --foreground: 220 9% 46%;
             --card: 0 0% 100%;
-            --card-foreground: 224 64% 10%;
+            --card-foreground: 220 13% 18%;
             --popover: 0 0% 100%;
-            --popover-foreground: 224 64% 10%;
-            --primary: 224 64% 33%;
-            --primary-foreground: 0 0% 98%;
-            --secondary: 210 40% 96.1%;
-            --secondary-foreground: 224 64% 10%;
-            --muted: 210 40% 96.1%;
-            --muted-foreground: 215 20% 65%;
-            --accent: 217 94% 67%;
-            --accent-foreground: 224 64% 10%;
+            --popover-foreground: 220 13% 18%;
+            --primary: 217 91% 45%;
+            --primary-foreground: 0 0% 100%;
+            --secondary: 220 14% 96%;
+            --secondary-foreground: 220 13% 18%;
+            --muted: 220 14% 96%;
+            --muted-foreground: 220 9% 46%;
+            --accent: 217 91% 45%;
+            --accent-foreground: 0 0% 100%;
             --destructive: 0 84.2% 60.2%;
             --destructive-foreground: 0 0% 98%;
-            --border: 214.3 31.8% 91.4%;
-            --input: 214.3 31.8% 91.4%;
-            --ring: 217 94% 67%;
+            --border: 220 13% 91%;
+            --input: 220 13% 91%;
+            --ring: 217 91% 45%;
             --radius: 0.5rem;
         }
 
@@ -63,7 +63,7 @@
             font-family: 'Cambria', 'Noto Serif', serif;
         }
 
-        /* Custom background with illustration */
+        /* Dot Grid Background Pattern */
         .container-illustration {
             position: fixed;
             top: 0;
@@ -71,7 +71,9 @@
             right: 0;
             bottom: 0;
             z-index: -1;
-            background: linear-gradient(135deg, hsl(var(--secondary)) 0%, hsl(var(--background)) 50%, hsl(var(--accent) / 0.1) 100%);
+            background-color: #f5f6f7;
+            background-image: radial-gradient(circle, #d1d5db 1px, transparent 1px);
+            background-size: 24px 24px;
         }
 
         /* Mobile menu styles */
@@ -84,35 +86,26 @@
             transform: translateX(0);
         }
 
-        /* Nav link styles */
+        /* Clean Nav link styles */
         .nav-link {
             position: relative;
             padding: 0.5rem 1rem;
-            color: hsl(var(--foreground) / 0.8);
-            transition: color 0.3s ease;
+            color: hsl(220, 9%, 46%);
+            transition: color 0.2s ease;
             text-decoration: none;
             display: inline-block;
+            font-size: 0.875rem;
+            font-weight: 400;
+            letter-spacing: 0.01em;
         }
 
         .nav-link:hover {
-            color: hsl(var(--primary));
+            color: hsl(217, 91%, 45%);
         }
 
-        .nav-link::after {
-            content: '';
-            position: absolute;
-            bottom: 0.5rem;
-            left: 0;
-            width: 100%;
-            height: 2px;
-            background-color: hsl(var(--primary));
-            transform: scaleX(0);
-            transition: transform 0.3s ease;
-        }
-
-        .nav-link:hover::after,
-        .nav-link.active::after {
-            transform: scaleX(1);
+        .nav-link.active {
+            color: hsl(217, 91%, 45%);
+            font-weight: 600;
         }
     </style>
 
@@ -160,42 +153,44 @@
     <div class="container-illustration"></div>
 
     <!-- Header -->
-    <header class="sticky top-0 z-50 w-full border-b border-border/40 bg-background/95 backdrop-blur">
-        <div class="container mx-auto flex h-16 max-w-7xl items-center justify-center px-4 sm:px-6 lg:px-8">
+    <header class="sticky top-0 z-50 w-full border-b border-border/20 bg-white">
+        <div class="container mx-auto flex h-14 max-w-7xl items-center justify-between px-6">
             <!-- Desktop Navigation -->
-            <div class="hidden items-center gap-1 md:flex">
-                <nav class="flex items-center gap-1 text-sm font-medium">
-                    <a href="index.html" class="nav-link active">
-                        INTRODUCCIÓN
-                    </a>
-                    <a href="temario.html" class="nav-link">
-                        TEMARIO
-                    </a>
-                    <a href="fuentes-de-datos.html" class="nav-link">
-                        FUENTES DE DATOS
-                    </a>
-                    <a href="enlaces.html" class="nav-link">
-                        ENLACES DE INTERÉS
-                    </a>
-                    <a href="sobre-mi.html" class="nav-link">
-                        SOBRE MÍ
-                    </a>
-                </nav>
-                <div class="relative ml-4">
-                    <svg class="absolute left-3 top-1/2 h-4 w-4 -translate-y-1/2 text-muted-foreground"
+            <nav class="hidden items-center gap-0 md:flex">
+                <a href="index.html" class="nav-link active">
+                    INTRODUCCIÓN
+                </a>
+                <a href="temario.html" class="nav-link">
+                    TEMARIO
+                </a>
+                <a href="fuentes-de-datos.html" class="nav-link">
+                    FUENTES DE DATOS
+                </a>
+                <a href="enlaces.html" class="nav-link">
+                    ENLACES
+                </a>
+                <a href="sobre-mi.html" class="nav-link">
+                    SOBRE MÍ
+                </a>
+            </nav>
+
+            <!-- Search Bar -->
+            <div class="hidden items-center md:flex">
+                <div class="relative">
+                    <input type="search" placeholder="Buscar en temario..."
+                        class="h-9 w-56 rounded-lg bg-gray-100 pl-3 pr-10 text-sm text-gray-600 outline-none focus:ring-2 focus:ring-primary/20"
+                        id="headerSearch">
+                    <svg class="absolute right-3 top-1/2 h-4 w-4 -translate-y-1/2 text-gray-400"
                         xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                     </svg>
-                    <input type="search" placeholder="Buscar en temario..."
-                        class="h-9 w-48 rounded-md bg-secondary pl-9 pr-3 text-sm outline-none ring-ring focus:ring-2"
-                        id="headerSearch">
                 </div>
             </div>
 
             <!-- Mobile Menu Button -->
-            <div class="absolute right-4 md:hidden">
-                <button onclick="toggleMobileMenu()" class="p-2 text-foreground hover:text-primary"
+            <div class="md:hidden">
+                <button onclick="toggleMobileMenu()" class="p-2 text-gray-600 hover:text-primary"
                     aria-label="Abrir menú">
                     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor">
@@ -254,22 +249,44 @@
     </div>
 
     <!-- Main Content -->
-    <main class="relative flex-1 pb-24">
+    <main class="relative flex-1">
         <!-- Introducción Section -->
-        <section class="flex min-h-screen w-full items-center justify-center">
-            <div class="container mx-auto rounded-xl bg-white/85 px-4 py-8 text-center backdrop-blur-sm md:px-6">
-                <div class="flex flex-col items-center space-y-4">
-                    <div class="space-y-2">
+        <section class="flex min-h-screen w-full items-center justify-center px-4 py-20">
+            <div class="container mx-auto max-w-6xl">
+                <div
+                    class="bg-white rounded-[3rem] px-16 py-24 md:px-20 md:py-28 text-center shadow-[0_8px_30px_rgba(0,0,0,0.08)] transition-shadow hover:shadow-[0_8px_40px_rgba(0,0,0,0.12)]">
+                    <div class="flex flex-col items-center space-y-10">
                         <h1
-                            class="text-4xl font-extrabold tracking-tighter text-primary sm:text-5xl md:text-6xl lg:text-7xl">
+                            class="text-5xl sm:text-6xl md:text-7xl font-black tracking-tighter text-primary leading-tight">
                             INTRODUCCIÓN
                         </h1>
-                        <p class="mx-auto max-w-[900px] font-serif text-justify text-muted-foreground md:text-xl">
+                        <p class="mx-auto max-w-[680px] text-center text-gray-600 text-base md:text-lg leading-relaxed">
                             En esta web encontrarás resúmenes extendidos de temario, recursos y algunos enlaces de
-                            utilidad para la preparación de las oposiciones del Cuerpo de Inspectores del SOIVRE e
-                            Ingenieros Técnicos del SOIVRE.
+                            utilidad para la preparación de las oposiciones del <span
+                                class="font-semibold text-gray-800">Cuerpo de Inspectores del SOIVRE</span> e <span
+                                class="font-semibold text-gray-800">Ingenieros Técnicos del SOIVRE</span>.
                         </p>
+
+                        <!-- Pill Button -->
+                        <a href="temario.html"
+                            class="inline-flex items-center gap-2 px-8 py-3.5 rounded-full border-2 border-primary text-primary font-semibold text-sm hover:bg-primary hover:text-white transition-all duration-200">
+                            Explorar Temario
+                            <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5"
+                                    d="M9 5l7 7-7 7" />
+                            </svg>
+                        </a>
                     </div>
+                </div>
+
+                <!-- Slider Indicators -->
+                <div class="flex justify-center items-center gap-2 mt-12">
+                    <button class="w-8 h-1.5 rounded-full bg-gray-300 hover:bg-gray-400 transition-colors"
+                        aria-label="Slide 1"></button>
+                    <button class="w-8 h-1.5 rounded-full bg-primary" aria-label="Slide 2"></button>
+                    <button class="w-8 h-1.5 rounded-full bg-gray-300 hover:bg-gray-400 transition-colors"
+                        aria-label="Slide 3"></button>
                 </div>
             </div>
         </section>
