--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -17,6 +17,9 @@
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = { theme: { extend: { screens: { 'sm': '640px', 'md': '768px', 'lg': '1024px' } } } }
+    </script>
 
     <style>
         /* CSS Variables - Clean Minimal Theme */
@@ -52,7 +55,9 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background-color: hsl(var(--background));
+            background: linear-gradient(to bottom, #f5f6f7, #e8eaed);
+            position: relative;
+            min-height: 100vh;
             color: hsl(var(--foreground));
         }
 
